--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
     <optgroup label="Pizza">
       <option value="https://i.imgflip.com/ed42m.jpg">Pizza Pepperoni</option>
       <option value="https://i.imgflip.com/qt8f1.jpg">Pizza Dog</option>
+      <option value="https://i.imgflip.com/77km4.jpg">Pizza Cat</option>
     </optgroup>
   </select>
   <br><br>
