--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="refresh" content="5" />
     <title>ANZ GoGirlGoForIT DevOps Demo</title>
     <style>
       html, body {
