--- a/badge.html
+++ b/badge.html
@@ -161,7 +161,7 @@
       <form action="https://ils5ffg9o7.execute-api.ap-southeast-2.amazonaws.com/test/meme">
         <h1>Congratulations on completing the GoGirl DevOps workshop!</h1></br>
           <h2 style="color:rgb(233, 232, 235)">Enter your name:</h2></br>
-          <input type="text" name="bottomText" maxlength="40" placeholder="">
+          <input type="text" name="bottomText" maxlength="40" value="Your name here....">
           <input type="hidden" name="inFile" value="https://s3.ap-southeast-2.amazonaws.com/www.memegenerator.com/stickerTemplate.jpg">
           </br>
           <button type="submit" href="/">Generate Badge</button>
