--- a/badge.html
+++ b/badge.html
@@ -164,7 +164,7 @@
           <input type="text" name="bottomText" maxlength="40" value="Your name here....">
           <input type="hidden" name="inFile" value="https://s3.ap-southeast-2.amazonaws.com/www.memegenerator.com/stickerTemplate.jpg">
           </br>
-          <button type="submit" href="/">Generate Badge</button>
+          <a href="https:www.thedevopsgirl.com">Home</a>
       </form>
     </div>
   </body>
