--- a/demo.html
+++ b/demo.html
@@ -177,6 +177,7 @@
             <option value="https://i.imgflip.com/qt8f1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pizza Dog</option>
             <option value="https://i.imgflip.com/77km4.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pizza Cat</option>
             <option value="https://i.imgflip.com/3167a.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Darth Vader</option>
+            <option value="https://i.imgflip.com/4wki42.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premier</option>
           </select>
         </div>
         <button type="submit" href="/">Generate Meme</button></br></br>
