--- a/demo.html
+++ b/demo.html
@@ -175,6 +175,9 @@
             <option value="https://i.imgflip.com/qt8f1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pizza Dog</option>
             <option value="https://i.imgflip.com/77km4.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pizza Cat</option>
             <option value="https://i.imgflip.com/4wki42.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premier</option>
+            <option value="https://i.imgflip.com/ccf7q.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bananas in PJs</option>
+            <option value="https://i.imgflip.com/dyi7z.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confused Girl</option>
+            <option value="https://i.imgflip.com/f4gcq.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minion</option>
           </select>
           <p style="color:rgb(232, 232, 40)">Enter meme text:</p>
           <input type="text" name="bottomText" maxlength="50" value="Let's make memes!...."></br>
