--- a/demo.html
+++ b/demo.html
@@ -178,6 +178,7 @@
             <option value="https://i.imgflip.com/ccf7q.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bananas in PJs</option>
             <option value="https://i.imgflip.com/dyi7z.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confused Girl</option>
             <option value="https://i.imgflip.com/f4gcq.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minion</option>
+            <option value="https://i.imgflip.com/3167a.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Darth Vader</option>
           </select>
           <p style="color:rgb(232, 232, 40)">Enter meme text:</p>
           <input type="text" name="bottomText" maxlength="50" value="Let's make memes!...."></br>
